[gd_scene load_steps=8 format=3 uid="uid://bd04ynw0tnxga"]

[ext_resource type="Script" path="res://scripts/enemy/enemy.gd" id="1_8hap2"]
[ext_resource type="Script" path="res://scripts/enemy/enemy_state_machine.gd" id="1_fpwhs"]
[ext_resource type="Script" path="res://scripts/enemy/enemy_wander_state.gd" id="2_1uyuq"]
[ext_resource type="Script" path="res://scripts/enemy/enemy_follow_state.gd" id="3_ic88p"]
[ext_resource type="Script" path="res://scripts/enemy/enemy_attack_state.gd" id="4_yn521"]
[ext_resource type="Script" path="res://scripts/enemy/enemy_ray_cast_2d.gd" id="6_xili4"]

[sub_resource type="CircleShape2D" id="CircleShape2D_au13p"]
radius = 51.0098

[node name="Enemy" type="CharacterBody2D" node_paths=PackedStringArray("target")]
motion_mode = 1
wall_min_slide_angle = 0.0
script = ExtResource("1_8hap2")
target = NodePath(".")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("CircleShape2D_au13p")

[node name="Polygon2D" type="Polygon2D" parent="."]
color = Color(0.235816, 0.0160071, 0.391513, 1)
offset = Vector2(-50, -50)
polygon = PackedVector2Array(0, 0, 100, 0, 100, 100, 0, 100)

[node name="Polygon2D" type="Polygon2D" parent="Polygon2D"]
position = Vector2(50, 0)
color = Color(1, 0.176471, 0.113725, 1)
offset = Vector2(-105, -52)
polygon = PackedVector2Array(116, 20, 116, 84, 94, 84, 94, 20)

[node name="RayCast2D" type="RayCast2D" parent="."]
target_position = Vector2(96, 78)
script = ExtResource("6_xili4")

[node name="EnemyStateMachine" type="Node" parent="." node_paths=PackedStringArray("enemy", "state")]
script = ExtResource("1_fpwhs")
enemy = NodePath("..")
state = NodePath("EnemyWanderState")

[node name="EnemyWanderState" type="Node" parent="EnemyStateMachine" node_paths=PackedStringArray("actor")]
script = ExtResource("2_1uyuq")
actor = NodePath("../..")

[node name="EnemyFollowState" type="Node" parent="EnemyStateMachine"]
script = ExtResource("3_ic88p")

[node name="EnemyAttackState" type="Node" parent="EnemyStateMachine"]
script = ExtResource("4_yn521")

[node name="NavigationAgent2D" type="NavigationAgent2D" parent="."]
target_desired_distance = 60.0
avoidance_enabled = true
avoidance_layers = 2
avoidance_mask = 2

[node name="Timer" type="Timer" parent="NavigationAgent2D"]
